--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 
+
 		<script>
 		async function on_button_click(){
+			/*Displays loading*/
 			const loading = document.getElementById("loading");
       loading.style.display = "block";
+			/*Gets gpt response from website*/
 			const response = await fetch("http://localhost:8080/gpt_response", { method: 'GET' });
 			const text = await response.text()
 			prediction = document.getElementById("prediction");
@@ -17,21 +20,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat with Psychic</title>
 		<style>
-			/* Style for the loading text */
-			#loading {
-					display: none;
-					font-size: 18px;
-					color: #555;
-			}
-			/* Apply flexbox to the body to center all content */
         body {
+						/*Render background image */
 						background-image: url('https://lightcode-alchemy.com/wp-content/uploads/2019/12/2020-january_1500x926.jpg');
             background-size: cover; /* Makes the image cover the entire background */
             background-repeat: no-repeat; /* Ensures the image doesn't repeat */
             background-position: center; /* Centers the background image */
             height: 100vh; /* Ensures the body takes full viewport height */
             margin: 0; /* Removes default margin */
-
+						/* Apply flexbox to the body to center all content */
 						display: flex;
             flex-direction: column; /* Stack items vertically */
             justify-content: center; /* Center vertically */
@@ -43,13 +40,20 @@
 				body * {
             text-align: center;
         }
+				/* Style for the prediction paragraph */
+				#prediction {
+					padding: 15px;
+					width: 300px; /* Define horizontal boundary */
+					margin-top: 20px; /* Adds spacing between the button and the prediction */
+					overflow-wrap: break-word; /* Ensures long words are broken and don't overflow */
+				}
 
 	</style>
 </head>
 <body>
     <h1>Talk to the Psychic</h1>
 
-    <!-- Form that submits a GET request to the Flask backend -->
+    <!-- Button that submits a GET request to the Flask backend -->
         <button type="submit" onclick="on_button_click()">Click For Your Future</button>
 
 				<p id="loading">Psychic is thinking...</p>
